# olimpo

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.pt-BR.md  SPECS.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: EMBEDDED-BROWSER.md  RELEASE.md  SMOKE.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_control.rs  error.rs  extapps.rs  lib.rs  main.rs  state.rs  wallpaper.rs
src-tauri/src/db/: commands.rs  migrations.rs  mod.rs  repos.rs
src-tauri/src/fs/: commands.rs  mod.rs  path_guard.rs
src-tauri/src/github/: cache.rs  client.rs  commands.rs  mod.rs  models.rs
src-tauri/src/pty/: commands.rs  mod.rs  session.rs
src-tauri/src/secrets/: mod.rs
src/apps/: ComingSoon.tsx  registry.tsx
src/apps/about/: AboutApp.tsx
src/apps/files/: FileExplorer.tsx  files.css  pathUtils.test.ts  pathUtils.ts
src/apps/focus/: FocusApp.tsx  focus.css
src/apps/github/: GithubApp.tsx  github.css  relativeTime.test.ts  relativeTime.ts
src/apps/notes/: NotesApp.tsx  notes.css
src/apps/settings/: SettingsApp.tsx  settings.css
src/apps/terminal/: TerminalApp.tsx  terminal.css
src/lib/: ipc.ts  sanity.test.ts
src/os/desktop/: Desktop.tsx  DesktopIcons.tsx  QuickLinks.tsx  StickyLayer.tsx  Wallpaper.tsx  createSticky.ts  desktopicons.css  quicklinks.css  snapGrid.test.ts  sticky.css  wallpaper.css
src/os/dock/: Dock.tsx  dock.css
src/os/focus/: FocusOverlay.tsx  engine.test.ts  engine.ts  focusStore.ts  notify.ts  (+1 more)
(+25 files in other folders)
